--- a/frontend/src/pages/filaments/[id]/edit.astro
+++ b/frontend/src/pages/filaments/[id]/edit.astro
@@ -1,6 +1,12 @@
 ---
 import Layout from '../../../layouts/Layout.astro'
 
+export function getStaticPaths() {
+  return [
+    {params: {id: 'detail'}},
+  ];
+}
+
 const { id } = Astro.params
 ---
 
